# meshcore-packet-capture

./: .env  README.md  config.toml.example  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  uninstall.sh  user_install.sh  user_uninstall.sh
installer/: config.py
nix/: packages.nix
src/meshcore_packet_capture/: __init__.py  channel_capture.py  command_capture.py  config_loader.py  decoded_capture.py  direct_capture.py  packet_capture.py  payload_decode.py
tests/: conftest.py  test_command_capture.py  test_config_loader.py  test_version_consistency.py
tests/installer/: test_bash_bootstrap.py  test_owner_email.py  test_uninstall_script.py
tests/packet_capture/: test_channel_capture.py  test_core_behavior.py  test_decoded_capture.py  test_direct_capture.py  test_payload_decode_export.py
